[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/TileSets/Template Tileset/BreakableBlock.png" type="Texture" id=1]
[ext_resource path="res://Gameplay Scripts/BreakArea.gd" type="Script" id=2]
[ext_resource path="res://Audio/sfx/Cliff break.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 24 )

[node name="BreakableBlock" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BreakingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 48 )

[node name="HitBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="BreakArea" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )
linear_damp = 0.0
angular_damp = 0.0

[node name="Area" type="CollisionShape2D" parent="BreakArea"]
shape = SubResource( 2 )
[connection signal="finished" from="BreakingSound" to="." method="_on_BreakingSound_finished"]
[connection signal="body_entered" from="BreakArea" to="." method="_on_BreakArea_body_entered"]
